<resources>
    <string name="app_name">Nof1 Trials</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="question">Question</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="yes">Yes</string>
    <string name="comment">Note</string>
    <string name="schedule_reminder">"Remind me again in "</string>
    <string-array name="reminder_spinner_options">
        <item>10 Mins</item>
        <item>30 Mins</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
    </string-array>
    <string name="reschedule">Reschedule</string>
    <string name="patient_preferences">Patient preferences</string>
    <string name="doctor_preferences">Doctor preferences</string>
    <string name="patient_name">Patient name</string>
    <string name="patien_name_summary">What would you like to be known as?</string>
    <string name="doctor_config">Doctor config</string>
    <string name="doctor_config_summary">Load the doctor\'s configuration utility.</string>
    <string name="settings">Settings</string>
    <string name="doctor_email">Doctor\'s email</string>
    <string name="pharmacist_email">Pharmacist\'s email</string>
    <string name="config_email_use">The doctor\'s and pharmacist\'s email is required to send a copy of this questionnaire and any other information about the trial. They will not be used for any other purpose.</string>
    <string name="config_question_text">Question text</string>
    <string name="config_input_type">Input type</string>
    <string name="login_first_explain">Please enter an email address and any password you would like to use for this app. This will only be required for accessing the doctor configuration utilities. You are recommended not to use the password linked to your email account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="config_question_type_explain">Scale gives a 7 point scale to choose from. Please ensure that all questions are consistent with either high being good or high being bad. Number allows the patient to enter a discrete value. Checkbox is for a yes or no type question.</string>
    <string name="config_min_hint">Minimum label</string>
    <string name="config_max_hint">Maximum label</string>
    <string name="treatment_period">Length of treatment period</string>
    <string name="config_treatment_period_explain">The number of days in a block that each treatment is trialed for.</string>
    <string name="config_no_treatment_periods">Number of treatment periods</string>
    <string name="config_no_treatment_periods_explain">The number of pairs of treatment periods planned for the trial.</string>
    <string name="config_days_record">Days to record data</string>
    <string name="config_days_record_explain">The days in each treatment period for the patient to fill in the questionaire.</string>
    <string name="configuration">Configuration</string>
    <string-array name="config_input_type_array">
        <item>Scale</item>
        <item>Number</item>
        <item>Checkbox</item>
    </string-array>
    <string name="done">Done</string>
    <string name="login_details">Change password</string>
    <string name="preview">Preview</string>
    <string name="questionnaire_preview_explain">This is a preview of the questionnaire the patient will have to fill in. Please check any details, spelling etc and if you are happy press Save, otherwise Cancel will take you back to the previous screen.</string>
    <string name="save">Save</string>
    <string name="current_email">Current email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="login_change_explain">Input your current login details and the new password you would like to use.</string>
    <string name="change_login_details">Change login details</string>
    <string name="new_login_details">Set up new login details</string>
    <string name="passwords_not_equal">Passwords do not match</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="create_questionnaire">Create questionnaire</string>
    <string-array name="treatment_period_arr">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>Other</item>
    </string-array>
    <string name="include_comment">Include a note box at the end of the questionnaire?</string>
    <string name="enter_login_details">Please enter login details</string>
    <string name="config_timescale_check_prefix">Day </string>
    <string name="invalid_period_input">Invalid input type for number of treatment periods</string>
    <string name="invalid_length_input">Invalid input type for length of treatment periods</string>
    <string name="start_today">Start the trial today?</string>
    <string name="choose_date">Choose the start date…</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="vibrate_notifications">Vibrate</string>
    <string name="vibrate_on">Notifications will cause your phone to vibrate</string>
    <string name="vibrate_off">Notifications will not cause your phone to vibrate</string>
    <string name="flash_notifications">Flash</string>
    <string name="loud_notification">Play sound</string>
    <string name="flash_on">Notifications will flash lights</string>
    <string name="flash_off">Notifications will not flash lights</string>
    <string name="loud_on">Notification will play sound</string>
    <string name="loud_off">Notification will not play sound</string>
    <string name="notifications">Notifications</string>
    <string name="noti_first_title">Nof1 Trials</string>
    <string name="noti_first_text">Your trial is due to start today</string>
    <string name="noti_repeat_title">Nof1 Trials</string>
    <string name="noti_repeat_text">Please fill in this questionnaire</string>
    <string name="medicine_explain">Please enter details about the treatments used in the trial. Include any information the pharmacist may need to make the prescription.</string>
    <string name="treatment_a">Treatment A</string>
    <string name="treatment_b">Treatment B</string>
    <string name="any_notes">Any Notes</string>
    <string name="medicine_timing">Times to take medicine</string>
    <string name="add">Add…</string>
    <string name="edit">Edit…</string>
    <string name="time">Time</string>
    <string name="remove_last">Remove last</string>
    <string name="questionnaire_not_made">You must create the questionnaire first</string>
    <string name="fill_in_prompt">Ensure you have filled in: </string>
    <string name="noti_medicine_title">Nof1 Trials</string>
    <string name="noti_medicine_text">It is time to take your medicine</string>
    <string name="about_nof1">Nof1 trials app</string>
    <string name="about_details">"Copyright 2012 John Lawson\n\nAn application to help those working in the healthcare industry to design and implement N-of-1 trials. Developed by John Lawson under the supervision of Jeremy Wyatt at the Institute of Digital Healthcare, Warwick University.\n\nSee our webpage at http://www.nof1trial.org.\n\nThe app is licensed under the GNU GPLv3, a copy of which is available at http://www.gnu.org/licenses/gpl.html.\n\nSource code for the app is available at https://github.com/jwlawson/nof1.\n\nThis app uses ActionBarSherlock, ACRA crash reporting and some functionality from the Apache Commons Codec, available under the Apache v2 license found at http://www.apache.org/licenses/LICENSE-2.0.html. "</string>
    <string name="enter_data">Enter data</string>
    <string name="view_graphs">View graphs</string>
    <string name="about">About</string>
    <string name="data_input">Data input</string>
    <string name="form_builder">Form builder</string>
    <string name="receiver_permission">Used to ensure that only the N-of-1 app can access this receiver</string>
    <string name="doctors_name">Doctor\'s name</string>
    <string name="thanks">Thanks</string>
    <string name="you_are_now">"You have now completed day "</string>
    <string name="ad_hoc_you_are_now">"You have entered data for day "</string>
    <string name="out_of">" out of "</string>
    <string name="what_now">What would you like to do now?</string>
    <string name="go_home">Go to main screen</string>
    <string name="exit">Exit</string>
    <string name="problem_saving_file">"Problem saving file"</string>
    <string name="incorrect_login">"Incorrect login details"</string>
    <string name="answer_all">"Please answer all the questions"</string>
    <string name="title_comment_detail">Note</string>
    <string name="title_comment_list">Note list</string>
    <string name="view_comments">View notes</string>
    <string name="add_new_note">Add a new note:</string>
    <string name="add_note">Add new note</string>
    <string name="last_questionnaire">This was the last questionnaire you have to complete.</string>
    <string name="cancel_todays_alarm">You are scheduled to fill in this questionnaire later today. Would you like to cancel today\'s alarm?</string>
    <string name="email_csv">Email data file</string>
    <string name="no_email_app_found">"No email app found."</string>
    <string name="trial_data">"Nof1 Trial data"</string>
    <string name="results_attached">"Find attached the data from the Nof1 trial for "</string>
    <string name="include_samples">Include sample questions?</string>
    <string name="add_sample">Add sample questions</string>
    <string name="add_account">Add account…</string>
    <string name="attention">Attention</string>
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>
    <string name="skip">Skip</string>
    <string name="needs_account">To register this app, you must first create a Google account.</string>
    <string name="account_title">Connect to the cloud</string>
    <string name="accounts">Accounts</string>
    <string name="nof1_account_setup">Nof1 Account Setup</string>
    <string name="retrieve_account">Retrieving account information</string>
    <string name="schedule_into">The treatment schedule is only available once the trial is over. It shows which treatment was undertaken in each treatment period.</string>
    <string name="error_downloading_schedule">Error downloading schedule, please check network connection.\n\nIf the problem persists contact the pharmacist delivering the trial for the schedule.</string>
    <string name="downloading_schedule">Trying to download schedule now…</string>
    <string name="schedule">Schedule</string>
    <string name="creating_file">Creating csv file…</string>
    <string name="sending_email">Preparing to send email…</string>
    <string name="account_connect_explain">The app will upload data to Google app engine, so that your doctor can view your progress through the trial. To do this please choose an account to store the data under.\n\nYou will be able to view the data when logged in on our website nof1trial.org.</string>
    <string name="select_account">Select the account you wish to authorise:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_to_our_servers">Connected to our servers</string>
    <string name="reset_password">"Resetting password"</string>
    <string name="reset_complete">"Password reset. Please check your emails."</string>
    <string name="enter_email">"Please enter the correct email address."</string>
</resources>