<?xml version="1.0" encoding="utf-8"?>
<!--
  Nof1 Trials helper, making life easier for clinicians and patients in N of 1 trials.
  Copyright (C) 2012  WMG, University of Warwick
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You may obtain a copy of the GNU General Public License at  
  <http://www.gnu.org/licenses/>.
  
  Contributors:
      John Lawson - initial API and implementation
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/patient_preferences" >
        <EditTextPreference
            android:dialogTitle="@string/patien_name_summary"
            android:key="prefs_patient_name"
            android:summary="@string/patien_name_summary"
            android:title="@string/patient_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/doctor_preferences" >
        <PreferenceScreen
            android:summary="@string/doctor_config_summary"
            android:title="@string/doctor_config" >
            <intent 
                android:action="android.intent.action.MAIN"
                android:targetPackage="uk.co.jwlawson.nof1"
                android:targetClass="uk.co.jwlawson.nof1.activities.DoctorLogin" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
