<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large" >

    <TextView
        android:id="@+id/ad_hoc_text_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/thanks"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ad_hoc_text_you_are"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_text_thanks"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_text_thanks"
        android:text="@string/you_are_now"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ad_hoc_text_cancel_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_text_you_are"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_text_you_are"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/cancel_todays_alarm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/ad_hoc_btn_cancel_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_text_cancel_today"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_text_cancel_today"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/ad_hoc_text_what_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_btn_cancel_today"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_btn_cancel_today"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/what_now"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/ad_hoc_btn_graphs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_text_what_now"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_text_what_now"
        android:text="@string/view_graphs" />

    <Button
        android:id="@+id/ad_hoc_btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_btn_graphs"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_btn_graphs"
        android:text="@string/go_home" />

    <Button
        android:id="@+id/ad_hoc_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ad_hoc_btn_home"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ad_hoc_btn_home"
        android:text="@string/exit" />

</RelativeLayout>