<?xml version="1.0" encoding="utf-8"?>
<!--
  Nof1 Trials helper, making life easier for clinicians and patients in N of 1 trials.
  Copyright (C) 2012 John Lawson, WMG, University of Warwick
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You may obtain a copy of the GNU General Public License at  
  <http://www.gnu.org/licenses/>.
  
  Contributors:
      John Lawson - initial API and implementation
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large" >









    <TextView
        android:id="@+id/complete_text_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/thanks"
        android:textAppearance="?android:attr/textAppearanceMedium" />







    <TextView
        android:id="@+id/complete_text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_text_thanks"
        android:layout_alignRight="@+id/complete_text_thanks"
        android:layout_below="@+id/complete_text_thanks"
        android:layout_marginTop="@dimen/padding_medium"
        android:minLines="1"
        android:text="@string/you_are_now"
        android:textAppearance="?android:attr/textAppearanceMedium" />





    <TextView
        android:id="@+id/complete_text_what_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_text_progress"
        android:layout_alignRight="@+id/complete_text_progress"
        android:layout_below="@+id/complete_text_finished"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/what_now"
        android:textAppearance="?android:attr/textAppearanceMedium" />




    <Button
        android:id="@+id/complete_btn_graphs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_text_what_next"
        android:layout_alignRight="@+id/complete_text_what_next"
        android:layout_below="@+id/complete_text_what_next"
        android:text="@string/view_graphs" />



    <Button
        android:id="@+id/complete_btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_btn_graphs"
        android:layout_alignRight="@+id/complete_btn_graphs"
        android:layout_below="@+id/complete_btn_graphs"
        android:text="@string/go_home" />



    <Button
        android:id="@+id/complete_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_btn_home"
        android:layout_alignRight="@+id/complete_btn_home"
        android:layout_below="@+id/complete_btn_home"
        android:text="@string/exit" />





    <TextView
        android:id="@+id/complete_text_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complete_text_progress"
        android:layout_alignRight="@+id/complete_text_progress"
        android:layout_below="@+id/complete_text_progress"
        android:text="@string/last_questionnaire"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</RelativeLayout>
