<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/config_timescale_text_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/treatment_period"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/config_timescale_text_period_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_text_period"
        android:layout_alignRight="@+id/config_timescale_text_period"
        android:layout_below="@+id/config_timescale_text_period"
        android:text="@string/config_treatment_period_explain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/config_timescale_edit_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_text_period_explain"
        android:layout_alignRight="@+id/config_timescale_text_period_explain"
        android:layout_below="@+id/config_timescale_text_period_explain"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/config_timescale_text_number_periods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_edit_period"
        android:layout_below="@+id/config_timescale_edit_period"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/config_no_treatment_periods"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/config_timescale_text_number_periods_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_text_number_periods"
        android:layout_alignRight="@+id/config_timescale_edit_period"
        android:layout_below="@+id/config_timescale_text_number_periods"
        android:text="@string/config_no_treatment_periods_explain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/config_timescale_edit_number_periods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_text_number_periods_explain"
        android:layout_alignRight="@+id/config_timescale_text_number_periods_explain"
        android:layout_below="@+id/config_timescale_text_number_periods_explain"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/config_timescale_text_days_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_edit_number_periods"
        android:layout_alignRight="@+id/config_timescale_edit_number_periods"
        android:layout_below="@+id/config_timescale_edit_number_periods"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/config_days_record"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/config_timescale_text_days_record_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_timescale_text_days_record"
        android:layout_alignRight="@+id/config_timescale_text_days_record"
        android:layout_below="@+id/config_timescale_text_days_record"
        android:text="@string/config_days_record_explain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>