<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/config_doctor_first_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/config_doctor_first_explain"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/config_doctor_first_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_text_email"
        android:layout_alignRight="@+id/config_doctor_first_text_email"
        android:layout_below="@+id/config_doctor_first_text_email"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/config_doctor_first_text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_edit_email"
        android:layout_below="@+id/config_doctor_first_edit_email"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/config_doctor_first_edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_text_pass"
        android:layout_alignRight="@+id/config_doctor_first_edit_email"
        android:layout_below="@+id/config_doctor_first_text_pass"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/config_doctor_first_text_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_edit_pass"
        android:layout_below="@+id/config_doctor_first_edit_pass"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/repeat_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/config_doctor_first_edit_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_text_pass2"
        android:layout_alignRight="@+id/config_doctor_first_edit_pass"
        android:layout_below="@+id/config_doctor_first_text_pass2"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/config_doctor_first_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/config_doctor_first_text_email"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/config_doctor_first_text_email"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/login_first_explain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>